--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Poppins', sans-serif;
+    margin: 0%;
 }
 h1{
     font-size: 50px;
@@ -8,4 +9,31 @@ h1{
     color: orange
     ;
 
+}
+section{
+    display: inline-flex;
+}
+.half-width{
+    width: 80%;
+    padding-left: 5%;
+}
+.pad-top{
+    padding-top: 2%;
+    padding-right: 1%;
+}
+.h3-color{
+    color: green;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(tomato, orange);
+    border-radius: 5px;
+    padding: 15px 40px;
+    color: aliceblue;
+    font-size: 1.1em;
+
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
 }
